DOCS: Finish documentation for all endpoints
