# internal/handler/getCompanies.go
@@ -7,6 +7,16 @@ import (
 	"github.com/storify/backend/internal/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Get companies
+// @Description Get all companies
+// @Tags Companies
+// @Accept json
+// @Produce json
+// @Success 200 {object} GetCompaniesResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /companies [get]
 func GetCompaniesHandler(ctx *gin.Context) {
 	companies := []schemas.Company{}
 
